# kdrqt

./: CMakeLists.txt  README.md
cmake/modules/: GetGitVersion.cmake  QtCommon.cmake
src/: CMakeLists.txt  KDRProcess.cpp  KDRProcess.h  main.cpp
